@@ -32,9 +32,10 @@ float ExecutiveAlign(char *s1,char *s2,char *mat_file,float gap,float extend,int
 float ExecutiveDistance(char *sele1,char *sele2);
 float ExecutiveDist(char *nam,char *s1,char *s2,int mode,float cutoff,int labels,int quiet);
 void ExecutiveBond(char *s1,char *s2,int order,int add);
-int ExecutiveIterate(char *s1,char *expr,int read_only);
+int ExecutiveIterate(char *s1,char *expr,int read_only,int quiet);
 void ExecutiveLabel(char *s1,char *expr,int quiet);
-void ExecutiveIterateState(int i1,char *s1,char *expr,int read_only,int atomic_props);
+void ExecutiveIterateState(int i1,char *s1,char *expr,int read_only,
+                           int atomic_props,int quiet);
 int ExecutiveColor(char *name,char *color,int flags,int quiet);
 void ExecutiveInit(void);
 void ExecutiveFree(void);
