@@ -2,43 +2,23 @@
  Selector: found 107 atoms.
  Executive: object "trg" created.
  AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
+ Selector: found 107 atoms.
  AlterState: modified 107 atom states.
  Selector: found 107 atoms.
  AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
+ Selector: found 107 atoms.
  AlterState: modified 107 atom states.
  Selector: found 107 atoms.
  AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
+ Selector: found 107 atoms.
  AlterState: modified 107 atom states.
  Selector: found 107 atoms.
  AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
+ Selector: found 107 atoms.
  AlterState: modified 107 atom states.
  Selector: found 107 atoms.
  AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
  Selector: found 107 atoms.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- Selector: found 107 atoms.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- Selector: found 107 atoms.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- Selector: found 107 atoms.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
- Selector: found 107 atoms.
- AlterState: modified 107 atom states.
- AlterState: modified 107 atom states.
  AlterState: modified 107 atom states.
    0.081
 1    0.079    0.081    0.089
